--- a/main.css
+++ b/main.css
@@ -1,6 +1,8 @@
 #topbar {
     width: 100%;
-    height: 100;
+    height: 90px;
+    background-color: #5e5e5e;
+    margin-bottom: 20px;
 }
 
 #gamefield {
@@ -10,7 +12,9 @@
 }
 
 #bottombar {
-    height: 10px;
+    height: 200px;
+    background-color: #5e5e5e;
+    margin-top: 30px;
 }
 
 
@@ -22,8 +26,8 @@
 
 
 #counterPane {
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
     background-color: lightgrey;
 }
 
@@ -46,8 +50,8 @@
     top: 190;
 }
 
-#character-1 {
-    background-image: url(resources/images/wizard-1.png);
+#characterright {
+/*    background-image: url(resources/images/wizard-1.png);*/
     top: 50px;
     left: 300px;
 }
@@ -57,6 +61,7 @@
     width: 200px;
     height: 300px;
     position: absolute;
+    opacity: 0.8;
 }
 
 #characters {
@@ -65,19 +70,19 @@
     position: absolute;
 }
 
-#character-2 {
-    background-image: url(resources/images/wizard-1.png);
+#charactertop {
+/*    background-image: url(resources/images/wizard-1.png);*/
     left: 155px;
 }
 
-#character-3 {
-    background-image: url(resources/images/warrior-1.png);
+#characterbottom {
+/*    background-image: url(resources/images/warrior-1.png);*/
     left: 90px;
     top: 100
 }
 
-#character-4 {
-    background-image: url(resources/images/warrior-1.png);
+#characterleft {
+/*    background-image: url(resources/images/warrior-1.png);*/
     top: 50px;
 }
 
@@ -129,5 +134,16 @@
 
 #enemyHpBar {
     width: 100%;
-    margin-top: 2;
+    margin-top: 15;
+}
+
+body {
+    margin: 0;
+}
+
+#middlebar {
+    width: 100%;
+    height: 410px;
+    padding-top: 5px;
+    background-color: #5e5e5e;
 }
